<resources>
    <string name="app_name">iPlan</string>

    <string name="menu_daily">Daily Plan</string>
    <string name="menu_monthly">Monthly Plan</string>
    <string name="menu_year">Yearly Plan</string>
    <string name="menu_life">Bucket List</string>
    <string name="menu_settings">Setting</string>


    <string name="menu_checked">Checked</string>
    <string name="menu_default">Default</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- BucketList Create-->
    <string name="title_hint"> Enter the title </string>
    <string name="progress_type">Progress Type</string>
    <string name="target_age">Target Age</string>
    <string name="target_age_hint">Enter the target age</string>
    <string name="success">Success</string>

    <!-- Priority Text -->
    <string name='priority'>Proiority</string>
    <string name="top"> TOP </string>
    <string name="middle"> MIDDLE </string>
    <string name="low"> LOW </string>

    <!-- Goal Text -->
    <string name="goal"> GOAL </string>
    <string name="goal_current_status_hint"> Current Status </string>
    <string name="goal_current_money_hint"> Current Money </string>
    <string name="goal_current_satisfaction_hint"> Current Satisfaction </string>
    <string name="goal_hint"> Goal </string>
    <string name="divider"> / </string>
    <string name="hundred"> 100% </string>

    <!-- Button -->
    <string name="reset_btn"> RESET </string>
    <string name="save_btn"> SAVE </string>

    <!-- Day tab -->
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <!-- Day tab items -->
    <string name="mTabItem">M</string>
    <string name="tueTabItem">T</string>
    <string name="wmTabItem">W</string>
    <string name="thuTabItem">T</string>
    <string name="fTabItem">F</string>
    <string name="satTabItem">S</string>
    <string name="sunTabItem">S</string>

    <string name="enter_contents_of_note">Enter contents of note</string>
    <string name="start_time">Start Time</string>

    <!-- Recycler view items -->
    <string name="day_todo_name">Day Todo Name</string>
    <string name="year_todo_name">Year Todo Name</string>


    <!-- Month -->

    <string name="end_time"> End Time </string>

    <string name="dark_theme_header">Appearance</string>
    <string name="dark_theme_title">Dark theme</string>

    <string name="privacy_header">Privacy</string>
    <string name="privacy_title">Use Password</string>
    <string name="password">****</string>
    <string name="privacy_edt_hint">Enter 4 digits</string>


    <string name="enter_password">Enter your password</string>

    <string name="login">Login</string>
    <string name="exit">Exit</string>

</resources>

