<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory app:title="@string/dark_theme_header">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="darkAppTheme"
            android:title="@string/dark_theme_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/privacy_header">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pwCheck"
            android:title="@string/privacy_title" />

        <EditTextPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue=""
            android:summary="@string/privacy_edt_hint"
            android:key="edtPassword"
            android:selectAllOnFocus="true"
            android:title="@string/password"
            android:singleLine="true" />
    </PreferenceCategory>

</PreferenceScreen>