<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >

            <TextView
                android:id="@+id/textView123"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:layout_gravity="center"
                style="@style/DEFAULT_FONT_STYLE"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/etxtCurrentStatusYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/goal_current_status_hint"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                style="@style/DEFAULT_FONT_STYLE"
                />

            <TextView
                android:id="@+id/txtDivider123"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/divider"
                android:textStyle="bold"
                style="@style/DEFAULT_FONT_STYLE"
                />

            <EditText
                android:id="@+id/etxtGoalYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:layout_gravity="center_vertical"
                android:hint="@string/goal_hint"
                android:paddingLeft="10dp"
                style="@style/DEFAULT_FONT_STYLE"
                />
        </LinearLayout>
    </LinearLayout>
</merge>